# webapi/src/main/kotlin/com/office/webapi/resultmodels/ResultBase.kt
@@ -6,8 +6,8 @@ import io.ktor.http.HttpStatusCode
  * 返回结果
  */
 data class ResultBase (
-    val success: Boolean = true,  // 是否成功
-    val error: Int = HttpStatusCode.OK.value,  // 错误代码
-    val errorMsg: String = "",  // 错误信息
+    var success: Boolean = true,  // 是否成功
+    var error: Int = HttpStatusCode.OK.value,  // 错误代码
+    var errorMsg: String = "",  // 错误信息
     var data: Any? = null  // 数据
 )
